deploy/flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manual-ducati-monster-1100
  namespace: manual-ducati-monster-1100
spec:
  selector:
    app: manual-ducati-monster-1100
  ports:
    - name: http
      port: 80
      targetPort: http
